@@ -36,6 +36,7 @@ version 0.78cvs
 	* Print Gadu-Gadu messages to the debug window instead of the console
 	* New tabs should scroll correctly again (Tim Ringenbach)
 	* Ampersands in links should work right (Tim Ringenbach)
+	* Win32 transparency plugin fixes (Kevin Stange)
 
 	Preference Changes:
 	* Added a "none" smiley theme to replace the "Show graphical
